fixing view and add signature

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -80,8 +80,7 @@
               formControlName="password"
               name="password"
               [toggleMask]="true"
-              styleClass=""
-              inputStyleClass="w-full p-3 md:w-30rem"
+              inputStyleClass="w-20rem p-3 md:w-30rem"
             ></p-password>
             <small
               *ngIf="
