--- a/src/app/components/home/welcome/welcome.component.html
+++ b/src/app/components/home/welcome/welcome.component.html
@@ -3,8 +3,7 @@
     <div class="card">
       <p-toast></p-toast>
 
-      <h5>Dashboard</h5>
-      <h6>Under Construction!!!</h6>
+      <h4>Aplikasi E - Signature Internal</h4>
     </div>
   </div>
 </div>
