--- a/src/app/components/home/request-signature/request-signature.component.html
+++ b/src/app/components/home/request-signature/request-signature.component.html
@@ -36,7 +36,7 @@
           <div
             class="flex flex-column md:flex-row md:justify-content-between md:align-items-center"
           >
-            <h4 class="m-0">List Request Signaturee</h4>
+            <h4 class="m-0">List Request Signature</h4>
             <span class="block mt-2 md:mt-0 p-input-icon-left">
               <i class="pi pi-search"></i>
               <input
@@ -110,7 +110,7 @@
 
     <p-dialog
       [(visible)]="documentDialog"
-      [style]="{ width: '450px' }"
+      [style]="{ width: '40vw' }"
       header="Add Signature"
       [modal]="true"
       class="p-grid p-fluid"
@@ -145,7 +145,7 @@
             accept=".pdf"
             (change)="onUpload($event)"
           />
-          <div *ngIf="postDocument.fileData">
+          <div *ngIf="postDocument.fileData" class="mt-3">
             <iframe
               [src]="
                 sanitizer.bypassSecurityTrustResourceUrl(
@@ -171,7 +171,7 @@
                 [suggestions]="filteredApprovers"
                 (completeMethod)="filterApprover($event)"
                 id="approver-form"
-                field="fullName"
+                field="displayName"
                 [dropdown]="true"
                 appendTo="body"
               ></p-autoComplete>
@@ -190,7 +190,7 @@
               [(ngModel)]="selectedApprover"
               [suggestions]="filteredApprovers"
               (completeMethod)="filterApprover($event)"
-              field="fullName"
+              field="displayName"
               [dropdown]="true"
               appendTo="body"
             ></p-autoComplete>
