--- a/src/app/components/home/add-signature/add-signature.component.html
+++ b/src/app/components/home/add-signature/add-signature.component.html
@@ -1,8 +1,20 @@
 <div class="grid">
   <div class="col-12">
     <div class="card">
-      <h4 class="my-2">Document Name: {{ document.document.documentName }}</h4>
-      <div *ngIf="pdfSrc" class="pdf-container mt-6 ml-1">
+      <div class="header md:flex justify-content-between align-items-center">
+        <h4 class="md:mb-8">
+          Approve Document {{ document.document.documentName }}
+        </h4>
+        <button
+          pButton
+          pRipple
+          label="Approve"
+          icon="pi pi-check"
+          class="p-button-success"
+          (click)="export()"
+        ></button>
+      </div>
+      <div *ngIf="pdfSrc" class="pdf-container mt-4">
         <div class="pdf-wrapper field form-group">
           <ngx-extended-pdf-viewer
             [src]="pdfSrc"
@@ -17,14 +29,6 @@
           >
         </div>
       </div>
-      <button
-        pButton
-        pRipple
-        label="Save"
-        icon="pi pi-check"
-        class="p-button-text"
-        (click)="export()"
-      ></button>
     </div>
   </div>
 </div>
