--- a/src/app/components/home/welcome/welcome.component.html
+++ b/src/app/components/home/welcome/welcome.component.html
@@ -4,6 +4,7 @@
       <p-toast></p-toast>
 
       <h4>Aplikasi E - Signature Internal</h4>
+      <p>Selamat datang di aplikasi E-Signature Internal BCA Finance</p>
     </div>
   </div>
 </div>
