--- a/src/app/components/home/approval-signature/approval-signature.component.html
+++ b/src/app/components/home/approval-signature/approval-signature.component.html
@@ -45,21 +45,26 @@
             <th pSortableColumn="approved">
               Signature Status <p-sortIcon field="approved"></p-sortIcon>
             </th>
+            <th>Request By</th>
             <th>Approve Document</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-document let-i="rowIndex">
           <tr>
             <td>{{ i + 1 }}</td>
-            <td style="width: 28%; min-width: 10rem">
+            <td style="width: 25%; min-width: 10rem">
               <span class="p-column-title">Document Name</span
               >{{ document.document.documentName }}
             </td>
-            <td style="width: 28%; min-width: 10rem">
+            <td style="width: 25%; min-width: 10rem">
               <span class="p-column-title">Status</span>
               <span [ngClass]="getStatusBadgeClass(document.approved)">{{
                 document.approved
               }}</span>
+            </td>
+            <td style="width: 20%; min-width: 10rem">
+              <span class="p-column-title">Request By</span>
+              {{ document.document.uploadBy.username }}
             </td>
             <td>
               <div class="flex" *ngIf="!document.approved">
