--- a/src/app/components/home/approval-signature/approval-signature.component.html
+++ b/src/app/components/home/approval-signature/approval-signature.component.html
@@ -5,7 +5,7 @@
 
       <p-table
         #dt
-        [value]="documents"
+        [value]="datas"
         responsiveLayout="scroll"
         [rows]="10"
         [globalFilterFields]="['document.documentName', 'approved']"
@@ -13,8 +13,6 @@
         [rowsPerPageOptions]="[5, 10, 20]"
         [showCurrentPageReport]="true"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [(selection)]="selectedDocuments"
-        selectionMode="multiple"
         [rowHover]="true"
         dataKey="idApprover"
       >
@@ -49,32 +47,32 @@
             <th>Approve Document</th>
           </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-document let-i="rowIndex">
+        <ng-template pTemplate="body" let-data let-i="rowIndex">
           <tr>
             <td>{{ i + 1 }}</td>
             <td style="width: 25%; min-width: 10rem">
               <span class="p-column-title">Document Name</span
-              >{{ document.document.documentName }}
+              >{{ data.document.documentName }}
             </td>
             <td style="width: 25%; min-width: 10rem">
               <span class="p-column-title">Status</span>
-              <span [ngClass]="getStatusBadgeClass(document.approved)">{{
-                document.approved
+              <span [ngClass]="getStatusBadgeClass(data.approved)">{{
+                data.approved ? "signed" : "need sign"
               }}</span>
             </td>
             <td style="width: 20%; min-width: 10rem">
               <span class="p-column-title">Request By</span>
-              {{ document.document.uploadBy.username }}
+              {{ data.document.uploadBy.username }}
             </td>
             <td>
-              <div class="flex" *ngIf="!document.approved">
+              <div class="flex" *ngIf="!data.approved">
                 <button
                   pButton
                   pRipple
                   label="Sign"
                   icon="pi pi-pencil"
                   class="p-button-rounded p-button-success sm:ml-4"
-                  (click)="goToPageSignature(document.idApprover)"
+                  (click)="goToPageSignature(data.idApprover)"
                 ></button>
               </div>
             </td>
