--- a/src/app/components/home/request-signature/request-signature.component.html
+++ b/src/app/components/home/request-signature/request-signature.component.html
@@ -19,7 +19,7 @@
 
       <p-table
         #dt
-        [value]="documents"
+        [value]="datas"
         responsiveLayout="scroll"
         [rows]="10"
         [globalFilterFields]="['documentName', 'documentStatus', 'signed']"
@@ -27,7 +27,6 @@
         [rowsPerPageOptions]="[5, 10, 20]"
         [showCurrentPageReport]="true"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [(selection)]="selectedDocuments"
         selectionMode="multiple"
         [rowHover]="true"
         dataKey="idDocument"
@@ -51,10 +50,6 @@
         </ng-template>
         <ng-template pTemplate="header">
           <tr>
-            <!-- <th style="width: 0.5rem">
-              <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-            </th> -->
-
             <th>No</th>
             <th pSortableColumn="documentName">
               Document Name <p-sortIcon field="documentName"></p-sortIcon>
@@ -67,24 +62,24 @@
             </th>
           </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-document let-i="rowIndex">
+        <ng-template pTemplate="body" let-data let-i="rowIndex">
           <tr>
             <td>{{ i + 1 }}</td>
             <td style="width: 33%; min-width: 10rem">
               <span class="p-column-title">Document Name</span>
-              <a class="cursor-pointer" (click)="openPdfViewer(document)">{{
-                document.documentName
+              <a class="cursor-pointer" (click)="openPdfViewer(data)">{{
+                data.documentName
               }}</a>
             </td>
             <td style="width: 33%; min-width: 10rem">
               <span class="p-column-title">Status</span
-              >{{ document.documentStatus }}
+              >{{ data.documentStatus }}
             </td>
             <td style="width: 33%; min-width: 10rem">
-              <span class="p-column-title">Status</span>
-              <span [ngClass]="getStatusBadgeClass(document.signed)">{{
-                document.signed
-              }}</span>
+              <span class="p-column-title">Signature Status</span>
+              <span [ngClass]="getStatusBadgeClass(data.signed)">
+                {{ data.signed ? "signed" : "not signed" }}
+              </span>
             </td>
           </tr>
         </ng-template>
@@ -234,38 +229,5 @@
         ></button>
       </ng-template>
     </p-dialog>
-
-    <!-- <p-dialog
-      [(visible)]="deleteDocumentDialog"
-      header="Confirm"
-      [modal]="true"
-      [style]="{ width: '450px' }"
-    >
-      <div class="flex align-items-center justify-content-center">
-        <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
-        <span
-          >Are you sure you want to delete <b>{{ document.documentName }}</b
-          >?</span
-        >
-      </div>
-      <ng-template pTemplate="footer">
-        <button
-          pButton
-          pRipple
-          icon="pi pi-times"
-          class="p-button-text"
-          label="No"
-          (click)="deleteDocumentDialog = false"
-        ></button>
-        <button
-          pButton
-          pRipple
-          icon="pi pi-check"
-          class="p-button-text"
-          label="Yes"
-          (click)="deleteDocumentDialog = false"
-        ></button>
-      </ng-template>
-    </p-dialog> -->
   </div>
 </div>
